Fix font-sizes for login/signup for readabiltiy

--- a/css/header.css
+++ b/css/header.css
@@ -49,4 +49,5 @@
 
 .login-section>p {
     margin: 0 20px;
+    font-size: 20px;
 }
